--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 	<title>Accounts System</title>
-	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	
 	
@@ -9,9 +8,7 @@
 		.brand{
 			background: #adbbec;
 		}
-		.brand-text{
-			color: #aabbec !important;
-		}
+		
 		form{
 			max-width: 460px;
 			margin: 20px auto;	
@@ -19,7 +16,11 @@
 		}
 	</style>
 </head>
-
+<script src="https://unpkg.com/vue@next"></script>
+    <script>
+        
+        app.mount('#app')</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"></script>
 <body class="grey lighten-2">
     <div id="app">
         <div class="container-fluid">
@@ -90,10 +91,8 @@
     </div>
 </body>
 
-<script src="https://unpkg.com/vue@next"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"></script>
+
             
 			
-</body>
 
 </html>
