--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
                 <section class="container grey-text">
                     <h4 class="center">Add Invoice</h4>
                     <form class="white" action="" method="POST">
-                        <div class="mb-3">
-                            <label>Supplier Name:</label>
-                            <input type="text" name="inv_supplier" value="">
+                        <div class="flex mb-3">
+                            <div width=50%><label>Supplier Name:</label></div>
+                            <div width=50%><input type="text" name="inv_supplier" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <label>Invoice Number:</label>
-                            <input type="text" name="inv_no" value="">
+                            <div><label>Invoice Number:</label></div>
+                            <div><input type="text" name="inv_no" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
