--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div><label>Invoice Number:</label></div>
-                            <div><input type="text" name="inv_no" value=""></div>
+                            <div width=50%><label>Invoice Number:</label></div>
+                            <div width=50%><input type="text" name="inv_no" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <label>Invoice Date:</label>
-                            <input type="text" name="inv_date" value="">
+                            <div width=50%><label>Invoice Date:</label></div>
+                            <div width=50%><input type="text" name="inv_date" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
