--- a/index.html
+++ b/index.html
@@ -82,29 +82,29 @@
                 <section class="container grey-text">
                     <h4 class="center">Add Invoice</h4>
                     <form class="white" action="" method="POST">
-                        <div class="flex mb-3">
-                            <div width=50%><label>Supplier Name:</label></div>
-                            <div width=50%><input type="text" name="inv_supplier" value=""></div>
+                        <div class="flex mb-3 w-100">
+                            <div class="w-40"><label>Supplier Name:</label></div>
+                            <div class="w-50"><input type="text" name="inv_supplier" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div width=50%><label>Invoice Number:</label></div>
-                            <div width=50%><input type="text" name="inv_no" value=""></div>
+                            <div class="w-40"><label>Invoice Number:</label></div>
+                            <div class="w-50"><input type="text" name="inv_no" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div width=50%><label>Invoice Date:</label></div>
-                            <div width=50%><input type="text" name="inv_date" value=""></div>
+                            <div class="w-40"><label>Invoice Date:</label></div>
+                            <div class="w-50"><input type="text" name="inv_date" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <label>Invoice Description:</label>
-                            <input type="text" name="inv_desc" value="">
+                            <div class="w-40"><label>Invoice Description:</label></div>
+                            <div class="w-50"><input type="text" name="inv_desc" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <label>Office:</label>
-                            <input type="text" name="office" value="">
+                            <div class="w-40"><label>Office:</label></div>
+                            <div class="w-50"><input type="text" name="office" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
