Updated index (form)

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <label>Overhead:</label>
-                            <input type="text" name="overhead" value="">
+                            <div class="w-40"><label>Overhead:</label></div>
+                            <div class="w-50"><input type="text" name="overhead" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <label>Invoice Amount:</label>
-                            <input type="text" name="inv_amt" value="">
+                            <div class="w-40"><label>Invoice Amount:</label></div>
+                            <div class="w-50"><input type="text" name="inv_amt" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="center">
