--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <div class="red-text"></div>
                         </div>
                         <div class="center">
-                            <input type="submit" name="submit" value="submit" class="btn brand z-depth-0">
+                            <input type="button" name="submit" value="submit" class="btn btn-primary">
                         </div>
                     </form>
                 </section>
