--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div v-if="addInvoice">
-                <section class="container grey-text">
+                <section>
                     <h4 class="center">Add Invoice</h4>
                     <form class="white" action="" method="POST">
                         <div class="flex mb-3 w-100">
@@ -87,7 +87,7 @@
                             <div class="w-50"><input type="text" name="inv_supplier" value=""></div>
                             <div class="red-text"></div>
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-3 w-100">
                             <div class="w-40"><label>Invoice Number:</label></div>
                             <div class="w-50"><input type="text" name="inv_no" value=""></div>
                             <div class="red-text"></div>
