Updates to index.html

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                 <section>
                     <h4 class="center">Add Invoice</h4>
                     <form class="white" action="" method="POST">
-                        <div class="flex mb-3 w-100">
-                            <div class="w-40"><label>Supplier Name:</label></div>
-                            <div class="w-50"><input type="text" name="inv_supplier" value=""></div>
-                            <div class="red-text"></div>
+                        <div class="row align-items-start w-100">
+                            <div class="col"><label>Supplier Name:</label></div>
+                            <div class="col"><input type="text" name="inv_supplier" value=""></div>
+                            <div class="col red-text"></div>
                         </div>
-                        <div class="mb-3 w-100">
-                            <div class="w-40"><label>Invoice Number:</label></div>
-                            <div class="w-50"><input type="text" name="inv_no" value=""></div>
-                            <div class="red-text"></div>
+                        <div class="row align-items-start w-100">
+                            <div class="col"><label>Invoice Number:</label></div>
+                            <div class="col w-50"><input type="text" name="inv_no" value=""></div>
+                            <div class="col red-text"></div>
                         </div>
                         <div class="mb-3">
                             <div class="w-40"><label>Invoice Date:</label></div>
@@ -124,7 +124,6 @@
                 </section>
             </div>
         </div>
-        <div class="center grey-text">Copyright 2021 Bevan Dady</div>
     </div>
     <script src="https://unpkg.com/vue@3.0.5"></script>
 <script src="app.js"></script>   
