--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
                 <section>
                     <h4 class="center">Add Invoice</h4>
                     <form class="white" action="" method="POST">
-                        <div class="row align-items-start w-100">
-                            <div class="col"><label>Supplier Name:</label></div>
-                            <div class="col"><input type="text" name="inv_supplier" value=""></div>
+                        <div class="mb-3">
+                            <div><label>Supplier Name:</label></div>
+                            <div><input type="text" name="inv_supplier" value=""></div>
                             <div class="col red-text"></div>
                         </div>
-                        <div class="row align-items-start w-100">
-                            <div class="col"><label>Invoice Number:</label></div>
-                            <div class="col w-50"><input type="text" name="inv_no" value=""></div>
+                        <div class="mb-3">
+                            <div><label>Invoice Number:</label></div>
+                            <div><input type="text" name="inv_no" value=""></div>
                             <div class="col red-text"></div>
                         </div>
                         <div class="mb-3">
