Updated index.html and app.js

--- a/index.html
+++ b/index.html
@@ -93,28 +93,28 @@
                             <div class="col red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div class="w-40"><label>Invoice Date:</label></div>
-                            <div class="w-50"><input type="text" name="inv_date" value=""></div>
+                            <div><label>Invoice Date:</label></div>
+                            <div><input type="text" name="inv_date" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div class="w-40"><label>Invoice Description:</label></div>
-                            <div class="w-50"><input type="text" name="inv_desc" value=""></div>
+                            <div><label>Invoice Description:</label></div>
+                            <div><input type="text" name="inv_desc" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div class="w-40"><label>Office:</label></div>
-                            <div class="w-50"><input type="text" name="office" value=""></div>
+                            <div><label>Office:</label></div>
+                            <div><input type="text" name="office" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div class="w-40"><label>Overhead:</label></div>
-                            <div class="w-50"><input type="text" name="overhead" value=""></div>
+                            <div><label>Overhead:</label></div>
+                            <div><input type="text" name="overhead" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div class="w-40"><label>Invoice Amount:</label></div>
-                            <div class="w-50"><input type="text" name="inv_amt" value=""></div>
+                            <div><label>Invoice Amount:</label></div>
+                            <div><input type="text" name="inv_amt" value=""></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="center">
