--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
                         </div>
                         <div class="mb-3">
                             <div><label>Invoice Description:</label></div>
-                            <div><input type="text" name="inv_desc" value=""></div>
+                            <div><input type="text" name="inv_desc" v-model="invoiceDescription"></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
                             <div><label>Office:</label></div>
-                            <div><input type="text" name="office" value=""></div>
+                            <div><input type="text" name="office" v-model="office"></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
                             <div><label>Overhead:</label></div>
-                            <div><input type="text" name="overhead" value=""></div>
+                            <div><input type="text" name="overhead" v-model="overhead"></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
                             <div><label>Invoice Amount:</label></div>
-                            <div><input type="text" name="inv_amt" value=""></div>
+                            <div><input type="text" name="inv_amt" v-model="invoiceAmount"></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="center">
