Updated index.html and app.js

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <div class="red-text"></div>
                         </div>
                         <div class="center">
-                            <input type="button" name="submit" @click="update()" class="btn btn-primary">
+                            <input type="button" name="submit" @click="update()" class="btn btn-primary" value="Post invoice">
                         </div>
                     </form>
                 </section>
