--- a/index.html
+++ b/index.html
@@ -120,16 +120,18 @@
                         <div class="center">
                             <input type="button" name="submit" @click="update()" class="btn btn-primary" value="Post invoice">
                         </div>
+                        <br/>
+                        <div>{{statusMessage}}</div>
                     </form>
                 </section>
             </div>
         </div>
     </div>
     <script src="https://unpkg.com/vue@3.0.5"></script>
-<script src="app.js"></script>   
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</body>
+    <script src="app.js"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    </body>
 
 
             
