--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				        </div>
 				        <div class="btn-group" role="group">
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="supplierReview=true; addInvoice=false">
+								<button class="btn btn-info" @click="supplierReview=true; addInvoice=false; suppl=null">
 								    Supplier Review 
 								</button>
 				            </div>
@@ -132,9 +132,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </body>
-
-
-            
-			
-
 </html>
