--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                     </form>
                 </section>
             </div>
+            <div v-if="payments">
+                Payment Processing    
+            </div>
         </div>
     </div>
     <script src="https://unpkg.com/vue@3.0.5"></script>
