--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                 </section>
             </div>
             <div v-if="payments">
-                Payment Processing    
+                <section>
+                    <h4 class="center">Payment Processing</h4>
+                </section>
             </div>
         </div>
     </div>
