--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             <div v-if="payments">
                 <section>
                     <h4 class="center">Payment Processing</h4>
+                    <br/>
+                    <br/>
+                    Supplier name
                 </section>
             </div>
         </div>
