--- a/index.html
+++ b/index.html
@@ -127,7 +127,13 @@
                     <h4 class="center">Payment Processing</h4>
                     <br/>
                     <br/>
-                    Supplier name
+                     <p class="text-center py-5">
+                    <label>Supplier Name:</label>
+                    <input type="text" name="supplier" @keyup.enter="getSupplier(suppl)" v-model="suppl"></input>
+                    <button class="btn btn-info" @click="getSupplier(suppl)">
+				        Supplier Review 
+				    </button>
+                </p>
                 </section>
             </div>
         </div>
