--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <br/>
                      <p class="text-center py-5">
                     <label>Supplier Name:</label>
-                    <input type="text" name="supplier" @keyup.enter="getSupplier(suppl)" v-model="suppl"></input>
-                    <button class="btn btn-info" @click="getSupplier(suppl)">
-				        Supplier Review 
+                    <input type="text" name="supplier" @keyup.enter="processPayments(suppl)" v-model="suppl"></input>
+                    <button class="btn btn-info" @click="processPayments(suppl)">
+				        Process payments 
 				    </button>
                 </p>
                 </section>
