--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <br/>
                      <p class="text-center py-5">
                     <label>Supplier Name:</label>
-                    <input type="text" name="supplier" @keyup.enter="processPayments(suppl)" v-model="suppl"></input>
-                    <button class="btn btn-info" @click="processPayments(suppl)">
+                    <input type="text" name="supplier" @keyup.enter="processPayments(suppl)" v-model="supplierPayments"></input>
+                    <button class="btn btn-info" @click="processPayments(supplierPayments)">
 				        Process payments 
 				    </button>
                 </p>
