--- a/index.html
+++ b/index.html
@@ -127,13 +127,16 @@
                     <h4 class="center">Payment Processing</h4>
                     <br/>
                     <br/>
-                     <p class="text-center py-5">
+                    <p class="text-center py-5"></p>
                     <label>Supplier Name:</label>
                     <input type="text" name="supplier" @keyup.enter="processPayments(suppl)" v-model="supplierPayments"></input>
                     <button class="btn btn-info" @click="processPayments(supplierPayments)">
 				        Process payments 
 				    </button>
-                </p>
+                    <div v-if="paymentProcessing">
+                        Next!
+                    </div>
+                        
                 </section>
             </div>
         </div>
