--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <br/>
                     <p class="text-center py-5"></p>
                     <label>Supplier Name:</label>
-                    <input type="text" name="supplier" @keyup.enter="processPayments(suppl)" v-model="supplierPayments"></input>
+                    <input type="text" name="supplier" @keyup.enter="processPayments(suppl)" v-model="paymentsSupplier"></input>
                     <button class="btn btn-info" @click="processPayments()">
 				        Process payments 
 				    </button>
