Modified database_queries.php and index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        Next!
+                        Current total to pay: 0 GBP
                     </div>
                         
                 </section>
