--- a/index.html
+++ b/index.html
@@ -135,6 +135,19 @@
 				    </button>
                     <div v-if="paymentProcessing">
                         Current total to pay: 0 GBP
+                        <br><br>
+                        {{ invoices }}
+                        <table>
+                            <tr v-for="invoice in invoices">
+                               <td>{{invoice.number}}</td>
+                               <td>{{invoice.id}}</td>
+                               <td>{{invoice.date}}</td>
+                               <td>{{invoice.description}}</td>
+                               <td>{{invoice.amount}}</td>
+                               <td>{{invoice.amount}}</td>
+                               <td></td>
+                            </tr>
+                        </table>
                     </div>
                         
                 </section>
