Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                                 <th>Paid</th>
                             </tr>
                             <tr v-for="invoice in invoices">
-                                <td><input type="checkbox" value="invoice.number"/></td>
-                                <td>{{invoice.number}}</td>
-                                <td>{{invoice.id}}</td>
-                                <td>{{invoice.date}}</td>
-                                <td>{{invoice.amount}}</td>
-                                <td>{{invoice.paid}}</td>
+                                <td class="px-4"><input type="checkbox" value="invoice.number"/></td>
+                                <td class="px-4">{{invoice.number}}</td>
+                                <td class="px-4">{{invoice.id}}</td>
+                                <td class="px-4">{{invoice.date}}</td>
+                                <td class="px-4">{{invoice.amount}}</td>
+                                <td class="px-4">{{invoice.paid}}</td>
                                 <td></td>
                             </tr>
                         </table>
