--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 <th>Paid</th>
                             </tr>
                             <tr v-for="invoice in invoices">
-                                <td class="px-4"><input type="checkbox" value="invoice.number"/></td>
+                                <td class="px-4"><input type="checkbox" value="invoice.number" @click="updatePayment(invoice.amount)"/></td>
                                 <td class="px-4">{{invoice.number}}</td>
                                 <td class="px-4">{{invoice.id}}</td>
                                 <td class="px-4">{{invoice.date}}</td>
