--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                                 <th>Inv Amt</th>
                                 <th>Paid</th>
                             </tr>
-                            <tr v-for="invoice in invoices">
-                                <td class="px-4"><input type="checkbox" value="invoice.number" @click="updatePayment(invoice.amount)"/></td>
+                            <tr v-for="(invoice, index) in invoices">
+                                <td class="px-4"><input type="checkbox" value="invoice.number" @click="updatePayment(index)"/></td>
                                 <td class="px-4">{{invoice.number}}</td>
                                 <td class="px-4">{{invoice.id}}</td>
                                 <td class="px-4">{{invoice.date}}</td>
