--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        Current total to pay: {{ totalToPay }} GBP
-                        <br><br>
+                        Current total to pay: {{ totalToPay.toFixed(2) }} GBP
+                        <br><br>{{ invoices[0] }}
             
                         <table>
                             <tr>
@@ -147,7 +147,7 @@
                                 <th>Paid</th>
                             </tr>
                             <tr v-for="(invoice, index) in invoices">
-                                <td class="px-4"><input type="checkbox" value="invoice.number" @click="updatePayment(index)"/></td>
+                                <td class="px-4"><input type="checkbox" v-model="checkedInvoices[index]" @click="updatePayment(index)"/></td>
                                 <td class="px-4">{{invoice.number}}</td>
                                 <td class="px-4">{{invoice.id}}</td>
                                 <td class="px-4">{{invoice.date}}</td>
