Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                                 <td class="px-4">{{invoice.paid}}</td>
                                 <td></td>
                             </tr>
+                            <tr>
+                                <td></td><td></td><td></td><td></td>
+                                <td>{{ paymentsSum(invoices) }}</td><td></td>
+                                
+                            </tr>
                         </table>
                     </div>
                         
