Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				        Supplier Review 
 				    </button>
                 </p>
-                <div v-if="invoices">
+                <div v-if="invoices.length > 0">
                     <table class="table table-striped">
                         <thead>
                             <div class="text-center"><b>{{suppl}}</b></div>
@@ -73,6 +73,9 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+                <div v-else>
+                    No record for this supplier.
                 </div>
             </div>
             <div v-if="addInvoice">
